overflow fix

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -15,6 +15,7 @@
 html {
   height: 100%;
   -webkit-text-size-adjust: none;
+  overflow-x: hidden;
 }
 
 body {
